Updated website pages

--- a/facilities.html
+++ b/facilities.html
@@ -121,12 +121,12 @@
         <section class="content-section">
             <h2 class="section-title">Gallery</h2>
             <div class="gallery-grid">
-                <img src="images/carexpo.jpg" alt="Career expo" />
-                <img src="images/carexpo2.jpg" alt="Student booths" />
-                <img src="images/carexpo3.jpg" alt="Community engagement" />
-                <img src="images/unistaffs.jpg" alt="Staff and students" />
-                <img src="images/staffs.jpg" alt="Staff meeting" />
-                <img src="images/stdcon1.jpg" alt="Convention" />
+                <img src="images/learning env (1).JPG" alt="Career expo" />
+                <img src="images/learning env (11).JPG" alt="Student booths" />
+                <img src="images/facilities (5).jpg" alt="Community engagement" />
+                <img src="images/facilities (4).jpg" alt="Staff and students" />
+                <img src="images/facilities (6).jpg" alt="Staff meeting" />
+                <img src="images/learning env (8).JPG" alt="Convention" />
                        <img src="images/facilities (1).jpg" alt="Convention" />
                 <img src="images/facilities (2).jpg" alt="Convention" />
                 <img src="images/facilities (3).jpg" alt="Convention" />
@@ -136,6 +136,11 @@
                 <img src="images/facilities (7).jpg" alt="Convention" />
                 <img src="images/facilities (8).jpg" alt="Convention" />
                 <img src="images/facilities (9).jpg" alt="Convention" />
+                 <img src="images/testds (1).jpg" alt="Convention" />
+                <img src="images/testds (2).jpg" alt="Convention" />
+                <img src="images/testds (3).jpg" alt="Convention" />
+                <img src="images/tst (4).jpg" alt="Convention" />
+                <img src="images/testds (5).jpg" alt="Convention" />
                 
             </div>
         </section>
