--- a/index.html
+++ b/index.html
@@ -104,21 +104,23 @@ Facebook page or scan the QR Code below. Applications can be emailed
 to <b><a href="mailto:admission@pngcu.ac.pg">admission@pngcu.ac.pg</a></b>, or hand delivered to the Tertiary Wing of
 Waigani Christian College.
             </p>
-            <!----
-            <ul class="hero-highlights">
-                <li><i class="fas fa-check-circle" aria-hidden="true"></i> DHERST-recognised programs with practical internships</li>
-                <li><i class="fas fa-check-circle" aria-hidden="true"></i> Mentoring rooted in Scripture, worship and community care</li>
-                <li><i class="fas fa-check-circle" aria-hidden="true"></i> Smart learning environment</li>
-            </ul>-->
+           
             <div class="hero-contact">
                 <p><i class="fas fa-phone"></i> Phone: <strong>+675-71059837</strong> / <strong>+675-78454860</strong>/ <strong>+675-84619710</strong></p>
                 <p><i class="fas fa-envelope"></i> Email: <strong>admission@pngcu.ac.pg</strong></p>
             </div>
             <div class="qr-highlight" aria-label="Scan for admissions information">
+                <img src="images/qrfb.PNG" alt="QR code linking to PNGCIHE admission resources" />
+                <div class="qr-text">
+                    <strong>JOIN US</strong>
+                    <p>On Facebook</p>
+                </div>
+            </div>
+              <div class="qr-highlight" aria-label="Scan for admissions information">
                 <img src="images/qr.jpg" alt="QR code linking to PNGCIHE admission resources" />
                 <div class="qr-text">
-                    <strong>Scan to start your 2026 journey</strong>
-                    <p>Open your camera, scan the code, and download the latest checklist and application form in seconds.</p>
+                    <strong>SURVEY:</strong>
+                    <p>Expression of Interest</p>
                 </div>
             </div>
             <div class="cta-group">
