--- a/learning.html
+++ b/learning.html
@@ -57,87 +57,24 @@
             </nav>
         </div>
     </header>
-
-    <a class="back-link" href="team.html"><i class="fas fa-arrow-left"></i>Back to Leadership Team</a>
-
     <main>
-        <section class="profile-hero">
-            <img src="images/bitasup.jpeg" alt="Portrait of Fr. Alex Waine" />
-            <div class="bio">
-                <p class="badge">Leadership Team</p>
-                <h1>Dr.Bitas</h1>
-                <p class="role">EXECUTIVE DIRECTOR</p>
-                <div class="meta">
-
-                </div>
-                
-            </div>
-        </section>
-
-        <section class="content-section profile-section">
-            <h2 class="section-title">About Dr.Bitas</h2>
-            <p>
-                Dr. Bitas is a distinguished academic executive, business consultant, and civic leader with 
-over 35 years of multifaceted experience spanning higher education, corporate banking, 
-public service, and military reserve leadership. He holds a Doctor of Philosophy (Ph.D.) 
-in Development Administration, a Master's in Business Administration from Philippine 
-Christian University, and a Bachelor’s degree in Economics from San Beda University, 
-where he was a multi-year Leadership Awardee. <br><br>
-Currently serving as Vice President at Waigani Christian College – Tertiary Education 
-(soon Vice-Chancellor of Papua New Guinea Christian University), Dr. Bitas leads strategic 
-academic development, institutional governance, international partnerships, and 
-operational excellence. His academic roles have included Head of the Business 
-Administration Department at Far Eastern University and Associate Professorial Lecturer 
-at De La Salle University – Dasmariñas, among other faculty positions. His teaching 
-expertise spans Business Analytics, Economics, Finance, IT, Marketing, and Strategic 
-Management, with specialization in Power BI, SAP, SPSS, and Enterprise Data 
-Management. <br><br>
-Beyond academia, Dr. Bitas possesses a robust background in the banking sector, accumulating over three (3) decades of experience. 
-He was a Senior Manager and Head of Business Process Management – Transformation & Strategy at Malayan Banking Berhad 
-(Maybank) Philippines, where he defined development strategies, simplified policies, and acted as an Operational Risk Officer. As 
-Manager and head of Business Process Management at China Bank Savings, he was instrumental in establishing the start-up 
-department, writing new business processes, and leading enterprise-wide reengineering efforts. His banking career also includes 
-significant roles as Senior Assistant Manager, Business Design and Innovation Officer at East West Banking Corporation, and various 
-analytical positions, including Business Systems Analyst and Policy and Forms Analyst at Metropolitan Bank and Trust Company 
-(METROBANK), where he designed systems, wrote policies, and analysed organisational structures. 
-<br><br>
-As a Business Owner and Consultant at BITAS Business Consultancy, he provides expertise in Business Innovation, Training, 
-Analytics, and IT Solutions, including leading market research for the Department of Tourism's Hop-On Hop-Off Services. 
-Dr. Bitas is also highly active in the Military (Naval Défense Force) and humanitarian service. He holds the rank of Commander 
-(equiv.: Lieutenant Colonel) in both the Philippine Navy Reserve Command (22nd NGR, 222nd NSR) and the Philippine Coast Guard 
-Auxiliary. In these roles, he leads disaster response, environmental protection, socio-economic and civic action, and reserve 
-mobilization efforts across key regions in the Philippines. His leadership has been recognized through numerous Presidential Unit 
-Citations, the Civic Action Medal, the Anti-Marine Protection Medals, and the Awards in Development (It is the second highest 
-distinction presented by the Armed Forces of the Philippines for conspicuously meritorious and valuable achievement in the pursuit 
-of socio-economic and other non-combat activities, or for conspicuously exceptional service which contributed immensely in 
-accomplishing the peaceful objectives of the AFP, or in improving the quality of life of the people within the military establishment).  
-A passionate environmental advocate, he serves as International Coastal Clean-up Coordinator (ICC Philippines) and continues to 
-lead volunteer coastal protection and ocean conservancy initiatives. As the Founding President of the Business Analytics Society 
-of Educators (BASE), he has been instrumental in shaping business analytics education in the Philippines. 
-<br><br>
-
-He is a certified TVET Trainer,  IBM Academic Initiatives Evangelist and Trainer in Business Analytics, and a member of the Asian 
-Institute of Chartered Bankers (AICB), Malaysia, with a robust portfolio of certifications in project management, cybersecurity, 
-analytics, IT systems, and strategic leadership. These include credentials from IBM Global Center for Smarter Analytics, Microsoft, 
-CISCO, TUV Philippines, and others. 
-<br><br>
-Dr. Bitas is also an alumnus of Haggai Institute International (Singapore), where he was equipped with advanced leadership to 
-support nation-building and Gospel advocacy. His family shares his passion for education and public service, with members 
-contributing to sectors in data analytics, aviation, human resources, and technical education in both the Philippines and Canada.</p>
-      <!---- </section>
-
         <section class="content-section">
-            <h2 class="section-title">Ways he serves</h2>
-            <ul class="pill-list">
-                <li>Retreats &amp; recollections</li>
-                <li>Assessment mapping</li>
-                <li>Pastoral care appointments</li>
-                <li>Liturgical leadership</li>
-            </ul>
-        </section>---->
+            <h1 class="section-title">E-Learning Platform</h1>
+            <p>Welcome to Waigani Christian College-Tertiary Education's E-Learning Platform. Our online learning system is designed to provide students with flexible access to course materials, interactive learning experiences, and support resources. Whether you're attending classes on campus or remotely, our e-learning platform ensures that you have the tools you need to succeed in your studies.</p>
+            <h2>Getting Started</h2>
+            <p>To access the e-learning platform, please follow these steps:</p>
+            <ol>
+                <li><strong>Create an Account:</strong> If you are a new student, please register for an account using your student ID and email address.</li>
+                <li><strong>Login:</strong> Use your credentials to log in to the platform.</li>
+                <li><strong>Explore Courses:</strong> Browse through the available courses and enroll in the ones relevant to your program of study.</li>
+                <li><strong>Access Materials:</strong> Download lecture notes, watch video lectures, and participate in discussions.</li>
+            </ol>
+            <h2>Support and Resources</h2>
+            <p>If you encounter any issues while using the e-learning platform or need assistance, please reach out to our support team at <a href="mailto:support@waiganichristiancollege.ac.pg">admission@pngcu.ac.pg</a>.</p>
+        </section>
     </main>
-
-   <footer class="site-footer">
+   
+<footer class="site-footer">
         <div class="footer-grid">
             <div>
                 <h3>Find Us</h3>
