--- a/msbitas.html
+++ b/msbitas.html
@@ -58,31 +58,22 @@
         </div>
     </header>
 
-    <a class="back-link" href="team.html"><i class="fas fa-arrow-left"></i>Back to team grid</a>
+    <a class="back-link" href="team.html"><i class="fas fa-arrow-left"></i>Back to Leadership Team</a>
 
     <main>
         <section class="profile-hero">
-            <img src="images/ms.bitas.png" alt="Portrait of Maricel D. Bitas" />
+            <img src="images/msbitas.jpeg" alt="Portrait of Maricel D. Bitas" />
             <div class="bio">
-                <p class="badge">Student life</p>
-                <h1>Maricel D. Bitas </h1>
-                <p class="role">Caregiving Trainer, Assessor, and Humanitarian </p>
-                <div class="meta">
-                    <span><i class="fas fa-graduation-cap"></i> </span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:addmission@pngcu.ac.pg"></a></span>
-                </div>
-                <p class="quote"><i class="fas fa-quote-left"></i>Leads residences, student leadership, and wellbeing programs rooted in care.<i class="fas fa-quote-right"></i></p>
-                <ul class="pill-list">
-                    <li>Residence life</li>
-                    <li>Wellbeing &amp; safety</li>
-                    <li>Student leadership</li>
-                    <li>Co-curriculars</li>
-                </ul>
+                <p class="badge">Leadership Team</p>
+                <h1>Ms Maricel D. Bitas </h1>
+                <p class="role">HOUSEKEEPING EXECUTIVE AND TVET TRAINER</p>
+               
+                
             </div>
         </section>
 
         <section class="content-section profile-section">
-            <h2 class="section-title">Building a thriving campus</h2>
+            <h2 class="section-title">About Ms. Bitas</h2>
             <p><b>Ms. Bitas</b> is a highly experienced and certified professional 
                 in caregiving, boasting over 16 years of 
 hands-on experience, coupled with 9+ years as a distinguished Technical 
