--- a/benjamin.html
+++ b/benjamin.html
@@ -62,29 +62,27 @@
 
     <main>
         <section class="profile-hero">
-            <img src="images/mr.mul.png" alt="Portrait of Hon. MP Mr. Benjamin Mul" />
+            <img src="images/mul3.png" alt="Portrait of Hon. MP Mr. Benjamin Mul" />
             <div class="bio">
-                <p class="badge">Leadership</p>
-                <h1>Hon. MP Mr. Benjamin Mul</h1>
-                <p class="role">The Director-Papua New Guinea Christian Institute of Higher Education</p>
-                <div class="meta">
-                    <span><i class="fas fa-graduation-cap"></i></span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:admission@pngcu.ac.pg"></a></span>
-                </div>
-                <p class="quote"><i class="fas fa-quote-left"></i>From Humble Beginnings to Educating Papua New Guinea</p>
-                <ul class="pill-list">
-                    <li>Spiritual Development</li>
-                    <li>Intellectual Development</li>
-                    <li>Persional/ Charater/Attitude Development</li>
-                    <li>Physical Development</li>
-                </ul>
+                <p class="badge">Leadership Team</p>
+                <h1>Hon. Benjamin Mul
+</h1>
+                <p class="role">The Funder of Waigani Christian College-Tertiary Education
+</p>
+              
             </div>
         </section>
 
         <section class="content-section profile-section">
-            <h2 class="section-title">About Hon. MP Mr. Benjamin Mul</h2>
-            <p>As Director of PNG CIHE, Hon. MP Mr. Benjamin Mul guides institutional vision and academic quality, ensuring our programs serve both Papua New Guinea and the international community. His work blends data-driven improvement with a heart for ministry.</p>
-            <p>He collaborates closely with departments to cultivate student leaders, strengthen governance, and expand access to tertiary education rooted in Christian values.</p>
+            <h2 class="section-title">About Hon. Benjamin Mul-The FOUNDER
+</h2>
+            <p>Hon. Benjamin Mul is a Funder and Director of Waigani Christian College-Tertiary 
+                Education. He guides institutional vision and academic quality, ensuring our
+                 programs serve both Papua New Guinea and the international community. His work 
+                 blends data-driven improvement with a heart for the ministry.</p>
+            <p>He collaborates closely with departments to cultivate student leaders,
+                 strengthen governance, and expand access to tertiary education rooted 
+                 in Christian values.</p>
         </section>
 
       <!----  <section class="content-section">
