--- a/kaupa.html
+++ b/kaupa.html
@@ -62,11 +62,11 @@
 
     <main>
         <section class="profile-hero">
-            <img src="images/bitasup.jpeg" alt="Portrait of Fr. Alex Waine" />
+            <img src="images/mr.kaupa.png" alt="Portrait of Fr. Alex Waine" />
             <div class="bio">
                 <p class="badge">Leadership Team</p>
-                <h1>Dr.Bitas</h1>
-                <p class="role">EXECUTIVE DIRECTOR</p>
+                <h1>Mr.A.Kaupa</h1>
+                <p class="role">WSC CHAIRPERSON</p>
                 <div class="meta">
 
                 </div>
@@ -75,55 +75,29 @@
         </section>
 
         <section class="content-section profile-section">
-            <h2 class="section-title">About Dr.Bitas</h2>
-            <p>
-                Dr. Bitas is a distinguished academic executive, business consultant, and civic leader with 
-over 35 years of multifaceted experience spanning higher education, corporate banking, 
-public service, and military reserve leadership. He holds a Doctor of Philosophy (Ph.D.) 
-in Development Administration, a Master's in Business Administration from Philippine 
-Christian University, and a Bachelor’s degree in Economics from San Beda University, 
-where he was a multi-year Leadership Awardee. <br><br>
-Currently serving as Vice President at Waigani Christian College – Tertiary Education 
-(soon Vice-Chancellor of Papua New Guinea Christian University), Dr. Bitas leads strategic 
-academic development, institutional governance, international partnerships, and 
-operational excellence. His academic roles have included Head of the Business 
-Administration Department at Far Eastern University and Associate Professorial Lecturer 
-at De La Salle University – Dasmariñas, among other faculty positions. His teaching 
-expertise spans Business Analytics, Economics, Finance, IT, Marketing, and Strategic 
-Management, with specialization in Power BI, SAP, SPSS, and Enterprise Data 
-Management. <br><br>
-Beyond academia, Dr. Bitas possesses a robust background in the banking sector, accumulating over three (3) decades of experience. 
-He was a Senior Manager and Head of Business Process Management – Transformation & Strategy at Malayan Banking Berhad 
-(Maybank) Philippines, where he defined development strategies, simplified policies, and acted as an Operational Risk Officer. As 
-Manager and head of Business Process Management at China Bank Savings, he was instrumental in establishing the start-up 
-department, writing new business processes, and leading enterprise-wide reengineering efforts. His banking career also includes 
-significant roles as Senior Assistant Manager, Business Design and Innovation Officer at East West Banking Corporation, and various 
-analytical positions, including Business Systems Analyst and Policy and Forms Analyst at Metropolitan Bank and Trust Company 
-(METROBANK), where he designed systems, wrote policies, and analysed organisational structures. 
-<br><br>
-As a Business Owner and Consultant at BITAS Business Consultancy, he provides expertise in Business Innovation, Training, 
-Analytics, and IT Solutions, including leading market research for the Department of Tourism's Hop-On Hop-Off Services. 
-Dr. Bitas is also highly active in the Military (Naval Défense Force) and humanitarian service. He holds the rank of Commander 
-(equiv.: Lieutenant Colonel) in both the Philippine Navy Reserve Command (22nd NGR, 222nd NSR) and the Philippine Coast Guard 
-Auxiliary. In these roles, he leads disaster response, environmental protection, socio-economic and civic action, and reserve 
-mobilization efforts across key regions in the Philippines. His leadership has been recognized through numerous Presidential Unit 
-Citations, the Civic Action Medal, the Anti-Marine Protection Medals, and the Awards in Development (It is the second highest 
-distinction presented by the Armed Forces of the Philippines for conspicuously meritorious and valuable achievement in the pursuit 
-of socio-economic and other non-combat activities, or for conspicuously exceptional service which contributed immensely in 
-accomplishing the peaceful objectives of the AFP, or in improving the quality of life of the people within the military establishment).  
-A passionate environmental advocate, he serves as International Coastal Clean-up Coordinator (ICC Philippines) and continues to 
-lead volunteer coastal protection and ocean conservancy initiatives. As the Founding President of the Business Analytics Society 
-of Educators (BASE), he has been instrumental in shaping business analytics education in the Philippines. 
-<br><br>
+            <h2 class="section-title">About Mr. A. Kaupa</h2>
+            <p><br>
+               Mr. A. Kaupa is the Principal and Chairman of Waigani Christian 
+               College (WCC), one of Port Moresby’s leading Christian educational
+                institutions. With strong leadership experience and a deep commitment
+                 to faith-based education, he oversees the overall strategic direction,
+                  academic operations and institutional growth of the college. Under his
+                   guidance, Waigani Christian College has continued to expand its enrolment,
+                    strengthen its academic programs, and uphold its founding Christian values 
+                    drawn from Proverbs 22:6.<br><br>
 
-He is a certified TVET Trainer,  IBM Academic Initiatives Evangelist and Trainer in Business Analytics, and a member of the Asian 
-Institute of Chartered Bankers (AICB), Malaysia, with a robust portfolio of certifications in project management, cybersecurity, 
-analytics, IT systems, and strategic leadership. These include credentials from IBM Global Center for Smarter Analytics, Microsoft, 
-CISCO, TUV Philippines, and others. 
-<br><br>
-Dr. Bitas is also an alumnus of Haggai Institute International (Singapore), where he was equipped with advanced leadership to 
-support nation-building and Gospel advocacy. His family shares his passion for education and public service, with members 
-contributing to sectors in data analytics, aviation, human resources, and technical education in both the Philippines and Canada.</p>
+As both Principal and Chairman, Mr. Kaupa plays a central role in school governance, 
+staff leadership, curriculum implementation, and student welfare. His ability to balance 
+administrative responsibilities with a people-focused leadership style has contributed to 
+the college’s strong reputation for discipline, academic excellence, and moral character 
+development. Throughout his tenure, he has championed the vision of providing quality 
+education from early childhood to senior secondary levels, and he continues to support
+ initiatives that encourage second-chance learning opportunities for students across the 
+ National Capital District.<br><br>
+
+Mr. Kaupa remains dedicated to ensuring that Waigani Christian College maintains
+ its standards as a disciplined, inclusive and value-driven institution, committed 
+ to developing responsible young men and women for Papua New Guinea’s future.</p>
       <!---- </section>
 
         <section class="content-section">
