--- a/tedalau.html
+++ b/tedalau.html
@@ -58,118 +58,69 @@
         </div>
     </header>
 
-    <a class="back-link" href="team.html"><i class="fas fa-arrow-left"></i>Back to team grid</a>
+    <a class="back-link" href="team.html"><i class="fas fa-arrow-left"></i>Back to Leadership Team</a>
 
     <main>
         <section class="profile-hero">
             <img src="images/ted1.png" alt="Portrait of Mr. Ted Kuaie Alau" />
             <div class="bio">
-                <p class="badge"></p>
+                <p class="badge">Leadership Team</p>
                 <h1>Mr.Ted Kuaie Alau</h1>
-                <p class="role">Administration & HR Management</p>
-                <div class="meta">
-                    <span><i class="fas fa-graduation-cap"></i> </span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:pcu.tedalau@gmail.com"></a></span>
-                </div>
-                <p class="quote"><i class="fas fa-quote-left"></i>Oversees admissions, certification, human resource development, and administration <i class="fas fa-quote-right"></i></p>
-                <ul class="pill-list">
-                    <li>Administration</li>
-                    <li>Human Resource Management</li>
-                </ul>
-            </div>
+                <p class="role">REGISTRAR
+</p>
+               
         </section>
 
         <section class="content-section profile-section">
-            <h2 class="section-title">Ted Kuaie Alau</h2>
-            <p>
-<b>Jiwaka Province, Papua New Guinea (Currently based in Port Moresby)</b><br>
+            <h2 class="section-title">About Ted Kuaie Alau</h2>
+            <p><br>
+Ted Kuaie Alau is an accomplished and highly respected professional
+ from Jiwaka Province, Papua New Guinea, and is currently based in Port 
+ Moresby. With forty years of experience in Higher Education Administration 
+ and Human Resources Management, he has built a distinguished career 
+ across Papua New Guinea’s leading universities and government institutions.
+  His expertise spans academic registration, student affairs, strategic
+   leadership, policy development, and scholarship administration. Throughout
+    his career, he has remained committed to mentoring and supporting young people 
+    as they progress through their academic and professional journeys.<br><br>
 
-A highly seasoned and dedicated professional with four decades of experience (40
-years) in Higher Education Administration and Human Resources Management.
-Proven expertise in academic registration, student affairs, strategic leadership, and
-scholarship management within Papua New Guinea's university system and
-government sector. Dedicated to mentoring and supporting young people in their
-progress and development. 
-<br><br>
-<b>Professional Experiences</b><br>
-            <div class="table-wrapper">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Period</th>
-                            <th>Role</th>
-                            <th>Institution/Organization</th>
-                            <th>Key Responsibilities &amp; Achievements</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>2015 – 2022</td>
-                            <td>Vice President, Student Affairs</td>
-                            <td>Divine Word University (DWU)</td>
-                            <td>Provided executive leadership and oversight for the Student Services Office, ensuring high-quality support and welfare for students.</td>
-                        </tr>
-                        <tr>
-                            <td>2007 – 2015</td>
-                            <td>Executive Officer, Student Services</td>
-                            <td>Divine Word University (DWU)</td>
-                            <td>Managed and supported student services operations as requested by the University President.</td>
-                        </tr>
-                        <tr>
-                            <td>2001 – 2006</td>
-                            <td>Deputy Secretary</td>
-                            <td>Department of Higher Education, Research, Science and Technology (DHERST)</td>
-                            <td>Managed and administered the Tertiary Education Student Assistance Scheme (TESAS) scholarship program.</td>
-                        </tr>
-                        <tr>
-                            <td>2002</td>
-                            <td>Diploma in Education Primary (In-service)</td>
-                            <td>PNGEI</td>
-                            <td>Completed in-service professional studies supporting student engagement and welfare.</td>
-                        </tr>
-                        <tr>
-                            <td>1989 – 2000</td>
-                            <td>Deputy Registrar</td>
-                            <td>University of Goroka (UOG)</td>
-                            <td>Led university administration, providing leadership and management for Registrar’s office functions.</td>
-                        </tr>
-                        <tr>
-                            <td>1987 – 1989</td>
-                            <td>Senior Assistant Registrar</td>
-                            <td>University of Goroka (UOG)</td>
-                            <td>Managed key aspects of the Registrar's duties.</td>
-                        </tr>
-                        <tr>
-                            <td>1980 – 1986</td>
-                            <td>Assistant Registrar</td>
-                            <td>University of Goroka (UOG)</td>
-                            <td>Built foundational expertise in university administration and academic program registration.</td>
-                        </tr>
-                        <tr>
-                            <td>1978 – 1979</td>
-                            <td>Graduate Assistant</td>
-                            <td>Registrar’s Office, University of Papua New Guinea (UPNG)</td>
-                            <td>Supported the administrative functions of the Registrar’s office post-graduation.</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-<br>
-<b>Education & Professional Development</b><br>
-<b>Master of Arts (MA) in Development Studies and Human Resources</b><br>
--Australian National University (ANU), Canberra, ACT, Australia<br>
--Awarded second Australian Government scholarship (Completed 1998)<br><br>
-<b>Master of Education (M.Ed.)</b><br>
--University of New England, Australia<br>
--Awarded first Australian Government scholarship (Completed 1986)<br><br>
-<b>Bachelor of Education (B.Ed.)</b><br>
--University of Papua New Guinea (UPNG)<br>
--Graduated 1977 (Matriculated 1974)<br><br>
+Mr. Alau’s professional experience reflects a steady rise through key
+ administrative and leadership roles. From 2015 to 2022, he served as the
+  Vice President for Student Affairs at Divine Word University, where he 
+  provided executive leadership to the Student Services Office and ensured 
+  that students received high-quality support and welfare services. Prior to 
+  this, between 2007 and 2015, he served as the Executive Officer for Student 
+  Services at the same institution, managing operations and providing administrative 
+  support to the University President.<br><br>
 
-<b>Personal Interests</b><br>
-Sports Enthusiast: Enjoys watching football, with a strong commitment to supporting the Brisbane Bronco.
+From 2001 to 2006, Mr. Alau served as Deputy Secretary at the Department of
+ Higher Education, Research, Science and Technology (DHERST). In this role,
+  he was responsible for managing and administering the Tertiary Education 
+  Student Assistance Scheme (TESAS), a national scholarship program that directly 
+  impacted thousands of students across the country. Earlier in his career, between 
+  1989 and 2000, he served as Deputy Registrar at the University of Goroka, where 
+  he provided leadership and oversight for critical Registrar’s Office functions. 
+  His earlier roles at the University of Goroka included serving as Senior Assistant 
+  Registrar from 1987 to 1989, and Assistant Registrar from 1980 to 1986, where he 
+  built foundational expertise in university administration and student support 
+  services. His career began in 1978 as a Graduate Assistant at the Registrar’s 
+  Office of the University of Papua New Guinea, where he supported key administrative 
+  functions immediately after graduation.<br><br>
 
+Mr. Alau’s academic background is equally impressive. He holds a Master of Arts
+ in Development Studies and Human Resources from the Australian National University
+  in Canberra, awarded under his second Australian Government scholarship, which he 
+  completed in 1998. He also earned a Master of Education from the University of New 
+  England, Australia, through his first Australian Government scholarship in 1986.
+   His foundational qualification is a Bachelor of Education from the University of 
+   Papua New Guinea, where he graduated in 1977 after matriculating in 1974. His
+    education reflects a lifelong commitment to learning, leadership, and service 
+    in the field of higher education.<br><br>
 
+Beyond his professional career, Mr. Alau is a passionate sports enthusiast. 
+He enjoys watching football and is a devoted supporter of the Brisbane Broncos.
+ His dedication to sports mirrors his commitment to excellence, teamwork, and 
+ personal development—qualities that have defined his remarkable career.
 
 </p>
         </section>
