Update website pages

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <p>Use the contact form, call our switchboard or visit our campus in Port Moresby. Our team is ready to support prospective students, parents, alumni and partners.</p>
             <p><strong>Office hours:</strong> Monday – Friday, 8:00am – 4:30pm</p>
         </div>
-        <img src="images/wcc inservice (9).JPG" alt="PNGC administrative office" />
+        <img src="images/testds (3).jpg" alt="PNGC administrative office" />
     </section>
 
     <main>
@@ -74,22 +74,21 @@
             <div class="contact-grid">
                 <div>
                     <h3>General enquiries</h3>
+                      <p>Phillipines Christain University-Waigani Campus</p>
+                     <p>(i.e. Waigani Christain College)</p>
+                    <p>Post: PMB 7086 Boroko, NCD</p>
+                      <p>Phone: +675 71059837/84619710/78454860</p>
                     <p>Email: <a href="mailto:admission@pngcu.ac.pg">admission@pngcu.ac.pg</a></p>
-                    <p>Phone: +675 71059837</p>
-                    <p>Postal: P.O. Box , Port Moresby, National Capital District</p>
-                    <p>Facebook: <a href="https://www.facebook.com/?ref=homescreenpwa" target="_blank" rel="noopener">Facebook Page</a></p>
+                
                 </div>
                 <div>
-                    <h3>Admissions & records</h3>
-                    <p>Email: <a href="mailto:pcu.ppokana2025@gmail.com">pcu.ppokana2025@gmail.com</a></p>
-                    <p>Phone: +675 84619710</p>
-                    <p>Office: Administration Block</p>
+                    <h3>Find Us on Facebook</h3>
+                   <p><img src="images/qrfb.PNG" alt="QR code linking to PNGCIHE admission resources" /></p>
+                    
                 </div>
                 <div>
-                    <h3>Finance & sponsorships</h3>
-                    <p>Email: <a href="mailto:admission@pngcu.ac.pg"> Enquiry</a></p>
-                    <p>Phone: +675 7845 4860</p>
-                    <p></p>
+                    <h3>SURVEY: Expression of Interest</h3>
+                    <p><img src="images/qreoi.PNG" alt="QR code linking to PNGCIHE admission resources" /></p>
                 </div>
             </div>
         </section>
