--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Waigani Christian College.
                 </div>
             </div>
               <div class="qr-highlight" aria-label="Scan for admissions information">
-                <img src="images/qr.jpg" alt="QR code linking to PNGCIHE admission resources" />
+                <img src="images/qreoi.PNG" alt="QR code linking to PNGCIHE admission resources" />
                 <div class="qr-text">
                     <strong>SURVEY:</strong>
                     <p>Expression of Interest</p>
