Add campus mosaic section to fill homepage

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                     <a href="about.html">About Us</a>
                     <ul class="submenu">
                         <li><a href="about.html">Overview</a></li>
-                        <li><a href="mission.html">Mission</a></li>
-                        <li><a href="vision.html">Vision</a></li>
-                        <li><a href="core.html">Core Values</a></li>
+                        <li><a href="mission-vision-core.html">Mission, Vision &amp; Core Values</a></li>
                         <li><a href="history.html">History</a></li>
                         <li><a href="director.html">Director's Message</a></li>
                         <li><a href="team.html">Leadership Team</a></li>
@@ -148,7 +146,48 @@ Waigani Christian College.
     </section>
 
     <main>
-       
+
+        <section class="content-section mosaic-section" aria-label="Campus highlights gallery">
+            <div class="section-header">
+                <h2 class="section-title">Life around campus</h2>
+                <p class="section-lead">Glance through recent moments from classrooms, student life, and community worship that make our campus vibrant.</p>
+            </div>
+            <div class="mosaic-grid">
+                <figure class="mosaic-item wide">
+                    <img src="images/facilities (5).jpg" alt="Students gathered in the new lecture theatre" />
+                    <figcaption>Lecture theatre buzzing before class begins.</figcaption>
+                </figure>
+                <figure class="mosaic-item">
+                    <img src="images/unistaffs.jpg" alt="Leadership team outside the main building" />
+                    <figcaption>Leadership team ready to welcome new students.</figcaption>
+                </figure>
+                <figure class="mosaic-item tall">
+                    <img src="images/facilities (1).jpg" alt="Hands-on learning in the health lab" />
+                    <figcaption>Clinical skills lab sessions with faculty mentors.</figcaption>
+                </figure>
+                <figure class="mosaic-item">
+                    <img src="images/tst (5).jpg" alt="Students walking on campus pathways" />
+                    <figcaption>Morning walks between classes along shaded paths.</figcaption>
+                </figure>
+                <figure class="mosaic-item">
+                    <img src="images/conferenceroom.jpg" alt="Seminar taking place in conference room" />
+                    <figcaption>Industry guest speakers sharing career insights.</figcaption>
+                </figure>
+                <figure class="mosaic-item wide">
+                    <img src="images/pcu uni.png" alt="Students studying around shared tables" />
+                    <figcaption>Study groups preparing for assessments together.</figcaption>
+                </figure>
+                <figure class="mosaic-item">
+                    <img src="images/learning env (1).JPG" alt="Students exploring the learning environment" />
+                    <figcaption>Exploring the learning environment with peers.</figcaption>
+                </figure>
+                <figure class="mosaic-item">
+                    <img src="images/dherst-1.jpg" alt="Aerial view of campus" />
+                    <figcaption>Bird’s-eye look over Waigani Christian College.</figcaption>
+                </figure>
+            </div>
+        </section>
+
         </section>
 
         <section class="content-section">
@@ -163,7 +202,25 @@ Waigani Christian College.
                     <p>Play-based learning and safeguarding practices tailored for PNG’s diverse cultures.</p>
                     <a href="programs.html" class="btn secondary">Find Out More</a>
                 </article>
-              
+                <article class="card">
+                    <img src="images/conferenceroom.jpg" alt="Students collaborating on accounting case studies" />
+                    <h3>Accounting &amp; Finance</h3>
+                    <p>Finance foundations paired with ethical leadership to support business growth across PNG.</p>
+                    <a href="programs.html" class="btn secondary">Find Out More</a>
+                </article>
+                <article class="card">
+                    <img src="images/pcu uni.png" alt="Students exploring technology resources" />
+                    <h3>Applied ICT</h3>
+                    <p>Industry-aligned IT pathways covering networking, software engineering and cybersecurity.</p>
+                    <a href="programs.html" class="btn secondary">Find Out More</a>
+                </article>
+                <article class="card">
+                    <img src="images/facilities (1).jpg" alt="Clinical skills lab at Waigani Christian College" />
+                    <h3>Health &amp; Midwifery</h3>
+                    <p>Hands-on clinical preparation focused on compassionate patient care and community health.</p>
+                    <a href="programs.html" class="btn secondary">Find Out More</a>
+                </article>
+
             </div>
         </section>
 
