--- a/about.html
+++ b/about.html
@@ -27,9 +27,7 @@
                     <a href="about.html">About Us</a>
                     <ul class="submenu">
                         <li><a href="about.html">Overview</a></li>
-                        <li><a href="mission.html">Mission</a></li>
-                        <li><a href="vision.html">Vision</a></li>
-                        <li><a href="core.html">Core Values</a></li>
+                        <li><a href="mission-vision-core.html">Mission, Vision &amp; Core Values</a></li>
                         <li><a href="history.html">History</a></li>
                         <li><a href="director.html">Director's Message</a></li>
                         <li><a href="team.html">Leadership Team</a></li>
@@ -65,7 +63,7 @@
             <p>Papua New Guinea Institute of Higher Education is a newly established christian institute that exists to develop leaders who respond
                 courageously to the social, economic and spiritual needs of Papua New Guinea. Our
                  integrated curriculum balances academic, pastoral care and Melanesian cultural intelligence.</p>
-            <a href="mission.html" class="btn"><i class="fas fa-heart"></i> Explore our mission</a>
+            <a href="mission-vision-core.html" class="btn"><i class="fas fa-heart"></i> Explore our mission</a>
         </div>
         <div class="media-overlay">
             
@@ -76,7 +74,7 @@
             <div class="overlay-content">
                 <p class="badge"></p>
                 <h3><i class="fas fa-check-circle" aria-hidden="true"></i>Stories of faith, service and learning</h3>
-                <a href="core.html"><i class="fas fa-play-circle"></i> Core Values</a>
+                <a href="mission-vision-core.html#values"><i class="fas fa-play-circle"></i> Core Values</a>
             </div>
         </div>
     </section>
