Refine header navigation and hero layout

--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@ Waigani Christian College.
                 <span>- Psalm 27:1</span>
             </div>
         </div>
+        <div class="hero-gallery" aria-label="Campus snapshots">
+            <figure class="hero-gallery-item">
+                <img src="images/facilities (1).jpg" alt="Student learning inside the campus facilities" />
+                <figcaption>Hands-on learning moments.</figcaption>
+            </figure>
+            <figure class="hero-gallery-item">
+                <img src="images/tst (5).jpg" alt="Students walking on shaded campus paths" />
+                <figcaption>Community life between classes.</figcaption>
+            </figure>
+            <figure class="hero-gallery-item">
+                <img src="images/conferenceroom.jpg" alt="Lecture hall prepared for students" />
+                <figcaption>Spaces ready for growth.</figcaption>
+            </figure>
+        </div>
     </section>
 
     <main>
