Adjust header layout and verse display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="images/logo.png" alt="Papua New Guinea Christian Institute of Higher Education crest" />
                 <div>
                     <p class="logo-title">Waigani Christian College-Tertiary Education</p>
-                    <p class="logo-verse">Matthew 6:33—"But seek ye first the kingdom of God, and His righteousness; and all these things shall be added unto you."</p>
+                    <p class="logo-verse">Matthew 6:33 — "But seek ye first the kingdom of God, and His righteousness;<br />and all these things shall be added unto you."</p>
                 </div>
             </a>
             <button class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
@@ -142,6 +142,20 @@ Waigani Christian College.
  shall I be afraid?"”</p>
                 <span>- Psalm 27:1</span>
             </div>
+        </div>
+        <div class="hero-gallery" aria-label="Campus snapshots">
+            <figure class="hero-gallery-item">
+                <img src="images/facilities (1).jpg" alt="Student learning inside the campus facilities" />
+                <figcaption>Hands-on learning moments.</figcaption>
+            </figure>
+            <figure class="hero-gallery-item">
+                <img src="images/tst (5).jpg" alt="Students walking on shaded campus paths" />
+                <figcaption>Community life between classes.</figcaption>
+            </figure>
+            <figure class="hero-gallery-item">
+                <img src="images/conferenceroom.jpg" alt="Lecture hall prepared for students" />
+                <figcaption>Spaces ready for growth.</figcaption>
+            </figure>
         </div>
     </section>
 
