--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <div class="header-content">
             <a class="logo-group" href="index.html">
                 <img src="images/logo.png" alt="Papua New Guinea Christian Institute of Higher Education crest" />
-                <div>
+                <div class="logo-text">
                     <p class="logo-title">Waigani Christian College-Tertiary Education</p>
-                    <p class="logo-verse">Matthew 6:33 — "But seek ye first the kingdom of God, and His righteousness;<br />and all these things shall be added unto you."</p>
+                    <p class="logo-verse">
+                        <span class="verse-ref">Matthew 6:33</span>
+                        <span class="verse-text">But seek ye first the kingdom of God, and His righteousness; and all these things shall be added unto you.</span>
+                    </p>
                 </div>
             </a>
             <button class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
@@ -107,18 +110,20 @@ Waigani Christian College.
                 <p><i class="fas fa-phone"></i> Phone: <strong>+675-71059837</strong> / <strong>+675-78454860</strong>/ <strong>+675-84619710</strong></p>
                 <p><i class="fas fa-envelope"></i> Email: <strong>admission@pngcu.ac.pg</strong></p>
             </div>
-            <div class="qr-highlight" aria-label="Scan for admissions information">
-                <img src="images/qrfb.PNG" alt="QR code linking to PNGCIHE admission resources" />
-                <div class="qr-text">
-                    <strong>JOIN US</strong>
-                    <p>On Facebook</p>
+            <div class="qr-row">
+                <div class="qr-highlight" aria-label="Scan for admissions information">
+                    <img src="images/qrfb.PNG" alt="QR code linking to PNGCIHE admission resources" />
+                    <div class="qr-text">
+                        <strong>JOIN US</strong>
+                        <p>On Facebook</p>
+                    </div>
                 </div>
-            </div>
-              <div class="qr-highlight" aria-label="Scan for admissions information">
-                <img src="images/qreoi.PNG" alt="QR code linking to PNGCIHE admission resources" />
-                <div class="qr-text">
-                    <strong>SURVEY:</strong>
-                    <p>Expression of Interest</p>
+                <div class="qr-highlight" aria-label="Scan for admissions information">
+                    <img src="images/qreoi.PNG" alt="QR code linking to PNGCIHE admission resources" />
+                    <div class="qr-text">
+                        <strong>SURVEY:</strong>
+                        <p>Expression of Interest</p>
+                    </div>
                 </div>
             </div>
             <div class="cta-group">
@@ -312,14 +317,10 @@ Waigani Christian College.
                     <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
-                <div>
-                    <div>
-                    <h3></h3>
-                    
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3935.
+                <div class="footer-map">
+                    <h3>Visit Our Campus</h3>
+                    <iframe class="map-embed" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3935.
                     9574512382046!2d147.1736830738835!3d-9.42513389065288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x690230bb3eef64ad%3A0xd6e103934061181a!2sWaigani%20Christian%20School!5e0!3m2!1sen!2spg!4v1763279868073!5m2!1sen!2spg" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing Port Moresby"></iframe>
-                </div>
-                    
                 </div>
             </div>
             <div>
